--- a/remote.html
+++ b/remote.html
@@ -85,6 +85,10 @@
                     <span class="fa fa-fw fa-toggle-up" aria-hidden="true"></span>
                     <span class="text">%%TRANSLATE:UPDATEMM%%</span>
                 </div>
+                <div id="update-mm-status" class="menu-element flex-like-button hidden">
+                    <span class="fa fa-fw fa-info-circle" aria-hidden="true"></span>
+                    <span class="text">%%TRANSLATE:UPDATE_AVAILABLE%%</span>
+                </div>
             </div>
 
             <div id="below-fold" class="below-fold menu-element hidden edit-menu settings-menu add-module-menu update-menu alert-menu main-menu power-menu">
