--- a/remote.html
+++ b/remote.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" type="text/css" href="vendor/font-awesome-4.5.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="modules/MMM-Remote-Control/remote.css">
 	
-	<link rel="apple-touch-icon" href=apple-touch-icon.png>
-	<meta name="apple-mobile-web-app-title" content=MagicRemote>
+	<link rel="apple-touch-icon" href="modules/MMM-Remote-Control/apple-touch-icon.png">
+	<meta name="apple-mobile-web-app-title" content="MagicRemote">
     	<meta name="apple-mobile-web-app-capable" content="yes">
    	<meta name="mobile-web-app-capable" content="yes">
     	<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">	
