--- a/remote.html
+++ b/remote.html
@@ -7,7 +7,7 @@
 	<link rel="icon" href="data:;base64,iVBORw0KGgo=">
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <link rel="stylesheet" type="text/css" href="fonts/roboto.css">
-    <link rel="stylesheet" type="text/css" href="vendor/font-awesome-4.5.0/css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="vendor/node_modules/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="modules/MMM-Remote-Control/remote.css">
 	
 	<link rel="apple-touch-icon" href="modules/MMM-Remote-Control/apple-touch-icon.png">
