--- a/remote.html
+++ b/remote.html
@@ -274,6 +274,8 @@
     </div>
 </div>
 
+<script type="text/javascript" src="/socket.io/socket.io.js"></script>
+<script type="text/javascript" src="js/socketclient.js"></script>
 <script type="text/javascript" src="modules/MMM-Remote-Control/remote.js"></script>
 
 </body>
