Add Electron functions to Power Menu and fix error response

--- a/remote.html
+++ b/remote.html
@@ -167,6 +167,18 @@
                         </span>
                         <span class="text">%%TRANSLATE:MONITOROFF%%</span>
                     </div>
+                    <div id="fullscreen-button" class="menu-element hidden button power-menu">
+                        <span class="fa fa-fw fa-arrows-alt" aria-hidden="true"></span>
+                        <span class="text">%%TRANSLATE:FULLSCREEN%%</span>
+                    </div>
+                    <div id="minimize-button" class="menu-element hidden button power-menu">
+                        <span class="fa fa-fw fa-window-minimize" aria-hidden="true"></span>
+                        <span class="text">%%TRANSLATE:MINIMIZE%%</span>
+                    </div>
+                    <div id="devtools-button" class="menu-element hidden button power-menu">
+                        <span class="fa fa-fw fa-terminal" aria-hidden="true"></span>
+                        <span class="text">%%TRANSLATE:DEVTOOLS%%</span>
+                    </div>
                 </div>
 
                 <!-- below fold part of alert menu -->
