--- a/remote.html
+++ b/remote.html
@@ -268,7 +268,8 @@
                 <span class="text">%%TRANSLATE:DONE%%</span>
             </div>
         </div>
-        <script type="text/javascript" src="/socket.io/socket.io.js"></script>
+        <script type="text/javascript" src="config/config.js"></script>
+        <script type="text/javascript" src="socket.io/socket.io.js"></script>
         <script type="text/javascript" src="js/socketclient.js"></script>
         <script type="text/javascript" src="modules/MMM-Remote-Control/scripts/jquery-3.3.1.slim.min.js"></script>
         <script type="text/javascript" src="modules/MMM-Remote-Control/remote.js"></script>
