Undo Config Implementation (Beta)

--- a/remote.html
+++ b/remote.html
@@ -72,6 +72,9 @@
                         <span class="fa fa-fw fa-save" aria-hidden="true"></span>
                         <span class="text">%%TRANSLATE:SAVE%%</span>
                     </div>
+                    <div id="undo-config" class="menu-element hidden button settings-menu">
+                        <span class="fa fa-fw fa-undo" aria-hidden="true"></span>
+                    </div>
                     <!-- add new module menu -->
                     <div id="search-container" class="menu-element hidden add-module-menu search-container">
                         <span class="fa fa-fw fa-search" aria-hidden="true"></span>
