--- a/remote.html
+++ b/remote.html
@@ -294,6 +294,7 @@
         <script type="text/javascript" src="socket.io/socket.io.js"></script>
         <script type="text/javascript" src="js/socketclient.js"></script>
         <script type="text/javascript" src="modules/MMM-Remote-Control/scripts/jquery-3.3.1.slim.min.js"></script>
+        <script type="text/javascript" src="modules/MMM-Remote-Control/scripts/showdown-1.9.1.min.js"></script>
         <script type="text/javascript" src="modules/MMM-Remote-Control/remote.js"></script>
 </body>
 
