Added Color Temperature changing feature

--- a/remote.html
+++ b/remote.html
@@ -36,7 +36,7 @@
                     </div>
                     <div id="hide-alert-button" class="menu-element hidden button alert-menu">
                         <span class="fa fa-fw fa-eye-slash" aria-hidden="true"></span>
-                        <span class="text">%%TRANSLATE:HIDEALERT%%</span>
+                        <div class="text">%%TRANSLATE:HIDEALERT%%</div>
                     </div>
                     <!-- edit menu -->
                     <div id="save-button" class="menu-element hidden button edit-menu">
@@ -51,18 +51,32 @@
                         <span class="fa fa-fw fa-toggle-off" aria-hidden="true"></span>
                         <span class="text">%%TRANSLATE:HIDEALL%%</span>
                     </div>
-                    <div class="menu-element hidden edit-menu one-line">
-                        <span class="stack fa-fw">
-                        <span class="fa fa-fw fa-sun-o outer-label fa-stack-1x" aria-hidden="true"></span>
-                        <span class="fa fa-fw fa-adjust inner-label fa-stack-1x" aria-hidden="true"></span>
-                        </span>
-                        <div id="brightness-container" class="slider-container menu-element hidden button edit-menu">
-                            <input id="brightness-slider" type="range" min="10" max="200" step="10" value="100" class="slider" />
+                    <div class="menu-element-container">
+                        <div class="menu-element hidden edit-menu one-line">
+                            <span class="stack fa-fw">
+                                <span class="fa fa-fw fa-sun-o outer-label fa-stack-1x" aria-hidden="true"></span>
+                                <span class="fa fa-fw fa-adjust inner-label fa-stack-1x" aria-hidden="true"></span>
+                            </span>
+                            <div id="brightness-container" class="slider-container menu-element hidden button edit-menu">
+                                <input id="brightness-slider" type="range" min="0" max="100" step="5" value="90" class="slider" />
+                            </div>
+                            <span id="brightness-reset" class="inline-menu-element hidden button edit-menu">
+                                <span class="fa fa-fw fa-undo" aria-hidden="true"></span>
+                            </span>
                         </div>
-                        <span id="brightness-reset" class="inline-menu-element hidden button edit-menu">
-                        <span class="fa fa-fw fa-undo" aria-hidden="true"></span>
-                        </span>
-                    </div>
+                        <div class="menu-element hidden edit-menu one-line">
+                            <span class="stack fa-fw">
+                                <span class="fa fa-fw fa-thermometer-three-quarters" aria-hidden="true"></span>
+                            </span>
+                            <div id="temp-container" class="slider-container menu-element hidden button edit-menu">
+                                <input id="temp-slider" type="range" min="150" max="500" step="25" value="325" class="slider" />
+                            </div>
+                            <span id="temp-reset" class="inline-menu-element hidden button edit-menu">
+                                <span class="fa fa-fw fa-undo" aria-hidden="true"></span>
+                            </span>
+                        </div>
+                     </div>
+                    
                     <!-- module menu -->
                     <div id="add-module" class="menu-element hidden button settings-menu">
                         <span class="fa fa-fw fa-plus" aria-hidden="true"></span>
