--- a/remote.html
+++ b/remote.html
@@ -36,7 +36,7 @@
                     </div>
                     <div id="hide-alert-button" class="menu-element hidden button alert-menu">
                         <span class="fa fa-fw fa-eye-slash" aria-hidden="true"></span>
-                        <div class="text">%%TRANSLATE:HIDEALERT%%</div>
+                        <span class="text">%%TRANSLATE:HIDEALERT%%</span>
                     </div>
                     <!-- edit menu -->
                     <div id="save-button" class="menu-element hidden button edit-menu">
