Use npm package for showdown

--- a/remote.html
+++ b/remote.html
@@ -484,7 +484,7 @@
     ></script>
     <script
       type="text/javascript"
-      src="modules/MMM-Remote-Control/scripts/showdown-1.9.1.min.js"
+      src="modules/MMM-Remote-Control/node_modules/showdown/dist/showdown.min.js"
     ></script>
     <script
       type="text/javascript"
