--- a/remote.html
+++ b/remote.html
@@ -480,7 +480,7 @@
     <script type="text/javascript" src="js/socketclient.js"></script>
     <script
       type="text/javascript"
-      src="modules/MMM-Remote-Control/scripts/jquery-3.3.1.slim.min.js"
+      src="modules/MMM-Remote-Control/node_modules/jquery/dist/jquery.slim.min.js"
     ></script>
     <script
       type="text/javascript"
