--- a/remote.html
+++ b/remote.html
@@ -6,8 +6,22 @@
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
     <link rel="icon" href="data:;base64,iVBORw0KGgo=" />
     <link rel="stylesheet" type="text/css" href="css/main.css" />
-    <link rel="stylesheet" type="text/css" href="fonts/roboto.css" />
-    <link rel="stylesheet" type="text/css" href="vendor/css/font-awesome.css" />
+    <!--
+     We need this onerror handling because MagicMirror changed the location of the css files in version 2.32.0.
+     We can remove this after a while, when most users have updated to the new version.
+     -->
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="css/roboto.css"
+      onerror="this.onerror=null;this.href='fonts/roboto.css';"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="css/font-awesome.css"
+      onerror="this.onerror=null;this.href='vendor/css/font-awesome.css';"
+    />
     <link
       rel="stylesheet"
       type="text/css"
