--- a/remote.html
+++ b/remote.html
@@ -520,7 +520,7 @@
         </div>
       </div>
     </div>
-    <script type="text/javascript" src="config/config.js"></script>
+    <script type="text/javascript" src="%%CONFIG_PATH%%"></script>
     <script type="text/javascript" src="socket.io/socket.io.js"></script>
     <script type="text/javascript" src="js/socketclient.js"></script>
     <script
