chore: handle prettier issue

--- a/remote.html
+++ b/remote.html
@@ -14,13 +14,19 @@
       rel="stylesheet"
       type="text/css"
       href="css/roboto.css"
-      onerror="this.onerror=null;this.href='fonts/roboto.css';"
+      onerror="
+        this.onerror = null;
+        this.href = 'fonts/roboto.css';
+      "
     />
     <link
       rel="stylesheet"
       type="text/css"
       href="css/font-awesome.css"
-      onerror="this.onerror=null;this.href='vendor/css/font-awesome.css';"
+      onerror="
+        this.onerror = null;
+        this.href = 'vendor/css/font-awesome.css';
+      "
     />
     <link
       rel="stylesheet"
