refactor: replace unmaintained `showdown` with `marked`

--- a/remote.html
+++ b/remote.html
@@ -531,7 +531,7 @@
     <script type="text/javascript" src="js/socketclient.js"></script>
     <script
       type="text/javascript"
-      src="modules/MMM-Remote-Control/node_modules/showdown/dist/showdown.min.js"
+      src="modules/MMM-Remote-Control/node_modules/marked/lib/marked.umd.js"
     ></script>
     <script
       type="text/javascript"
