refactor(remote): move links menu buttons to menu-nav for consistent layout

--- a/remote.html
+++ b/remote.html
@@ -60,6 +60,13 @@
               <span class="fa fa-fw fa-eye-slash" aria-hidden="true"></span>
               <span class="text">%%TRANSLATE:HIDEALERT%%</span>
             </div>
+            <!-- links menu buttons -->
+            <div
+              id="links-container-nav"
+              class="menu-element hidden links-menu"
+            >
+              <!-- Links will be dynamically inserted here -->
+            </div>
             <!-- search container for add-module menu -->
             <div
               id="search-container"
@@ -517,15 +524,6 @@
                 <span class="text">%%TRANSLATE:NO_MODULES_LOADED%%</span>
               </div>
               <div id="update-module-results" class="results small">
-                <!-- elements are inserted here -->
-              </div>
-            </div>
-            <!-- links menu content -->
-            <div
-              id="links-container"
-              class="result-list menu-element hidden links-menu"
-            >
-              <div id="links-results" class="results small">
                 <!-- elements are inserted here -->
               </div>
             </div>
