feat: add status badges and i18n for Classes menu

--- a/remote.html
+++ b/remote.html
@@ -67,8 +67,8 @@
               <span class="fa fa-fw fa-angle-right" aria-hidden="true"></span>
             </div>
             <div id="classes-button" class="button" role="button" tabindex="0">
-              <span class="fa fa-fw fa-wrench" aria-hidden="true"></span>
-              <span class="text">Classes Menu</span>
+              <span class="fa fa-fw fa-object-group" aria-hidden="true"></span>
+              <span class="text">%%TRANSLATE:CLASSES_MENU_NAME%%</span>
               <span class="fa fa-fw fa-angle-right" aria-hidden="true"></span>
             </div>
             <div id="update-button" class="button" role="button" tabindex="0">
