feat(remote): add modern SVG favicon

--- a/remote.html
+++ b/remote.html
@@ -5,7 +5,12 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="google" content="notranslate" />
-    <link rel="icon" href="data:;base64,iVBORw0KGgo=" />
+    <!-- Modern SVG favicon with dark mode support -->
+    <link
+      rel="icon"
+      href="modules/MMM-Remote-Control/img/favicon.svg"
+      type="image/svg+xml"
+    />
     <link rel="stylesheet" href="css/main.css" />
     <link rel="stylesheet" href="css/roboto.css" />
     <link rel="stylesheet" href="css/font-awesome.css" />
