feat(remote): enhance menu headers with icons, sort main menu and new updates icon

--- a/remote.html
+++ b/remote.html
@@ -77,13 +77,18 @@
               <span class="fa fa-fw fa-angle-right" aria-hidden="true"></span>
             </div>
             <div id="update-button" class="button" role="button" tabindex="0">
-              <span class="fa fa-fw fa-toggle-up" aria-hidden="true"></span>
+              <span class="fa fa-fw fa-download" aria-hidden="true"></span>
               <span class="text">%%TRANSLATE:UPDATE_MENU_NAME%%</span>
               <span class="fa fa-fw fa-angle-right" aria-hidden="true"></span>
             </div>
             <div id="alert-button" class="button" role="button" tabindex="0">
               <span class="fa fa-fw fa-envelope-o" aria-hidden="true"></span>
               <span class="text">%%TRANSLATE:ALERT_MENU_NAME%%</span>
+              <span class="fa fa-fw fa-angle-right" aria-hidden="true"></span>
+            </div>
+            <div id="links-button" class="button" role="button" tabindex="0">
+              <span class="fa fa-fw fa-link" aria-hidden="true"></span>
+              <span class="text">%%TRANSLATE:LINKS%%</span>
               <span class="fa fa-fw fa-angle-right" aria-hidden="true"></span>
             </div>
             <div
@@ -94,10 +99,6 @@
             >
               <span class="fa fa-fw fa-external-link" aria-hidden="true"></span>
               <span class="text">%%TRANSLATE:VIEW_MIRROR%%</span>
-            </div>
-            <div id="links-button" class="button" role="button" tabindex="0">
-              <span class="fa fa-fw fa-link" aria-hidden="true"></span>
-              <span class="text">%%TRANSLATE:LINKS%%</span>
             </div>
           </nav>
           <!-- Power menu navigation -->
