feat: add PWA support

--- a/remote.html
+++ b/remote.html
@@ -5,6 +5,18 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="google" content="notranslate" />
+
+    <!-- PWA Manifest -->
+    <link rel="manifest" href="modules/MMM-Remote-Control/manifest.json" />
+
+    <!-- Theme colors for PWA -->
+    <meta name="theme-color" content="#000000" />
+    <meta name="msapplication-navbutton-color" content="#000000" />
+    <meta name="msapplication-config" content="none" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-title" content="MM Remote" />
+
     <!-- Modern SVG favicon with dark mode support -->
     <link
       rel="icon"
@@ -17,15 +29,9 @@
     <link rel="stylesheet" href="modules/MMM-Remote-Control/remote.css" />
     <link
       rel="apple-touch-icon"
-      href="modules/MMM-Remote-Control/img/apple-touch-icon.png"
+      href="modules/MMM-Remote-Control/img/icon-192.png"
     />
-    <meta name="apple-mobile-web-app-title" content="MagicRemote" />
-    <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="mobile-web-app-capable" content="yes" />
-    <meta
-      name="apple-mobile-web-app-status-bar-style"
-      content="black-translucent"
-    />
   </head>
 
   <body>
