refactor: remove PM2 dependency, add universal process manager support
Replace PM2-specific restart/stop logic with universal approach:
- Desktop mode (Electron): app.relaunch() + app.quit()
- Server mode: process.exit(0) for clean restart, exit(1) for stop
- Wait for HTTP response via res.on('finish') before exit

Changes:
- Add handleRestart() and handleStop() replacing controlPm2()
- Fix shutdown/reboot: detect sudo password errors, show helpful message
- Update translations: RESTART→REBOOT, add CONFIRM_RESTARTMM
- Improve MINIMIZE hint: "restart to restore" instead of "cannot undo"
- Add missing translation keys (FULLSCREEN, MINIMIZE, DEVTOOLS)
- Update docs (README, FAQ with sudo setup guide, swagger.json)
- Remove all PM2 references from code and documentation
- Add error logging in catch blocks for better debugging

The `pm2ProcessName` config option is no longer used (silently ignored).
Restart now works automatically with any process manager (systemd, PM2,
Docker, etc.) configured to restart on exit code 0.

--- a/remote.html
+++ b/remote.html
@@ -120,7 +120,7 @@
             </div>
             <div id="restart-button" class="button" role="button" tabindex="0">
               <span class="fa fa-fw fa-refresh" aria-hidden="true"></span>
-              <span class="text">%%TRANSLATE:RESTART%%</span>
+              <span class="text">%%TRANSLATE:REBOOT%%</span>
             </div>
             <div
               id="restart-mm-button"
